Moved messages and recipients inside channel code